# llm-diligence

./: .env.example  .gitignore  README.md  diligentizer.py  json-to-markdown.py  parallel_diligentizer.sh  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.py  setup.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
analysis/: __init__.py  analyzer.py
models/: __init__.py  auto.py  base.py  cloud.py  contracts.py  corporate.py  credit_card_application.py  data_sharing.py  due_diligence.py  due_diligence_areas.py  financial.py  hr.py  iaas_contract.py  legal.py  service_orders.py  stock_options.py  tax.py
tests/: conftest.py  requirements-test.txt  run_tests.sh  test_analysis.py  test_auto_model.py  test_cli.py  test_generate_llm_schema.py  test_integration.py  test_llm.py  test_models.py
utils/: __init__.py  crawler.py  db.py  llm.py  llm_anthropic.py  llm_openai.py
